# anipip

./: .gitignore  heart_zstack_pipeline.json  main.py  pyproject.toml
.github/workflows/: build.yml
core/: __init__.py  image_container.py  parameters.py  pipeline.py  pipeline_data.py  plugin_base.py  plugin_registry.py  ports.py  settings.py  table_data.py  updater.py
gui/: __init__.py  image_viewer.py  main_window.py  node_canvas.py  node_widget.py  plugin_browser.py  plugin_defaults_dialog.py  progress_view.py  properties_panel.py  spreadsheet_viewer.py  viewer_window.py
installer/: windows_setup.iss
plugins/: __init__.py
plugins/converters/: __init__.py  background_subtraction.py  blur.py  brightness_contrast.py  channel_overlay.py  channel_splitter.py  coloc_visualization.py  create_mask.py  duplicate.py  format_standardizer.py  grayscale.py  mask_overlay.py  noise_floor.py  normalize.py  scale_bar.py  tissue_filter.py  z_projection.py
plugins/exporters/: __init__.py  image_exporter.py  spreadsheet_exporter.py
plugins/loaders/: __init__.py  batch_image_loader.py  image_loader.py  multichannel_folder_loader.py  zstack_loader.py
plugins/measurements/: __init__.py  colocalization.py  intensity_measurement.py  mask_intensity_measurement.py  noise_analysis.py  zstack_qc.py
